# fastapi-agent-streaming-practice

./: .gitignore  Makefile  README.md  database.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9e28a16c7045_init_db.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/modules/agents/: models.py  prompt.py  tools.py
app/modules/chats/: router.py  schema.py
app/modules/sessions/: router.py
app/static/: chat.html
